manifests/openzaak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openzaak-open-zaak
  labels:
    app.kubernetes.io/version: "1.6.0"
    helm.sh/chart: open-zaak-0.8.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: open-zaak
    app.kubernetes.io/instance: openzaak
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: open-zaak
      app.kubernetes.io/instance: openzaak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: open-zaak
        app.kubernetes.io/instance: openzaak
    spec:
      serviceAccountName: default
      securityContext:
        fsGroup: 1000
      # fix the file system permissions for the 1.5 upgrade
      containers:
        - name: open-zaak
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
          image: "openzaak/open-zaak:1.6.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
              httpHeaders:
                - name: Host
                  value: "openzaak-open-zaak"
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
              httpHeaders:
                - name: Host
                  value: "openzaak-open-zaak"
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            {}
          volumeMounts:
            - name: media
              mountPath: /app/private-media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: openzaak-open-zaak
