manifests/openzaak/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: openzaak-open-zaak-nginx
  labels:
    helm.sh/chart: open-zaak-0.8.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: open-zaak-nginx
    app.kubernetes.io/instance: openzaak
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app.kubernetes.io/name: open-zaak-nginx
    app.kubernetes.io/instance: openzaak
